fixing duplicate openapi code
