# backend/app/schemas/auth.py
@@ -4,6 +4,7 @@ from marshmallow import Schema, fields, validate, EXCLUDE
 class RegisterSchema(Schema):
     class Meta:
         unknown = EXCLUDE
+        title = "RegisterRequest"
 
     email = fields.Email(required=True)
     password = fields.Str(required=True, validate=validate.Length(min=6))
@@ -12,6 +13,7 @@ class RegisterSchema(Schema):
 class LoginSchema(Schema):
     class Meta:
         unknown = EXCLUDE
+        title = "LoginRequest"
 
     email = fields.Email(required=True)
     password = fields.Str(required=True, validate=validate.Length(min=1))
